@@ -115,3 +115,22 @@ table.tablesorter thead tr th {
   }
 
 }
+
+@keyframes blink {  
+  0% { background-color: #cbdee4; }
+  100% { background-color: none; }
+}
+@-webkit-keyframes blink {
+  0% { background-color: #cbdee4; }
+  100% { background-color: none; }
+}
+.blink {
+  -webkit-animation: blink 1s linear 2;
+  -moz-animation: blink 1s linear 2;
+  animation: blink 1s linear 2;
+} 
+
+.cr-error-trace {
+    font-family: @font-family-monospace;
+    font-size: @font-size-xsmall;
+}
